[gd_scene format=3 uid="uid://b80x8txcqw52u"]

[ext_resource type="Script" uid="uid://dqcj6u1jgvfgu" path="res://Scripts/UI/shop_panel.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://cxqub0sfewm4v" path="res://addons/font_auto_size_labels/demo/Anta-Regular.ttf" id="2_font"]
[ext_resource type="Texture2D" uid="uid://ch47vuvvpgyqn" path="res://Assets/Sprites/dollar.png" id="3_coin"]
[ext_resource type="PackedScene" uid="uid://to0c4eroteek" path="res://Scenes/close_btn.tscn" id="4_close_btn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.033853274, 0.03385329, 0.033853233, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_header"]
bg_color = Color(0.08, 0.08, 0.1, 1)
border_width_bottom = 1
border_color = Color(0.25, 0.25, 0.3, 1)

[node name="ShopPanel" type="Control" unique_id=573046534]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="." unique_id=1930976541]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Header" type="Panel" parent="Panel" unique_id=1196091199]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_header")

[node name="TitleLabel" type="Label" parent="Panel/Header" unique_id=1259422206]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "The Stranger's Shop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinDisplay" type="HBoxContainer" parent="Panel/Header" unique_id=1333602137]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -15.0
offset_right = 105.0
offset_bottom = 15.0
grow_vertical = 2
theme_override_constants/separation = 8

[node name="CoinIcon" type="TextureRect" parent="Panel/Header/CoinDisplay" unique_id=1086484439]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_coin")
expand_mode = 1
stretch_mode = 5

[node name="CoinLabel" type="Label" parent="Panel/Header/CoinDisplay" unique_id=1286293561]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 22
text = "0"
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel" unique_id=429641844]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/ScrollContainer" unique_id=1166675291]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ItemsContainer" type="VBoxContainer" parent="Panel/ScrollContainer/MarginContainer" unique_id=251767336]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="CloseBtn" parent="." unique_id=1066887933 instance=ExtResource("4_close_btn")]
layout_mode = 1
